--- a/kubernetes/tech-challenge-secret.yaml
+++ b/kubernetes/tech-challenge-secret.yaml
@@ -7,3 +7,6 @@ data:
   POSTGRES_USER: YWRtaW4=
   POSTGRES_PASSWORD: YWRtaW4=
   POSTGRES_DB: cG9zdGdyZXM=
+  MERCADO_PAGO_ACCESS_TOKEN: QVBQX1VTUi0yNTk4MjM4Njk2MDU1NzUxMTA5MDIxMjIyLTZjN2MzNDA0ODRhYmU3OTE3MGE3MDM3ZTA4NDY3ZDIyLTE0Njc2Mzc3ODI=
+  MERCADO_PAGO_USER_ID: MTQ2NzYzNzc4Mg==
+  MERCADO_PAGO_EXTERNAL_POS_ID: TE9KQTAwMVBPUzAwMQ==
