--- a/example.env
+++ b/example.env
@@ -4,3 +4,8 @@ POSTGRES_HOST="localhost:5432"
 POSTGRES_DB="postgres"
 
 ENVIRONMENT="dev"
+
+WEBHOOK_BASE_URL=""
+MERCADO_PAGO_ACCESS_TOKEN=""
+MERCADO_PAGO_USER_ID=""
+MERCADO_PAGO_EXTERNAL_POS_ID=""
